--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,9 +1,11 @@
 <div class="author">
+  {% if site.author.avatar %}
   <img
     class="author-avatar"
     src="{{ site.author.avatar }}"
     alt="{{ site.author.username }}"
   />
+  {% endif %}
   <h2 class="author-name">{{ site.author.name }}</h2>
   <p class="author-bio">{{ site.author.bio }}</p>
 </div>
