Update: Major portfolio improvements
- Add language switch (EN/KO) for blog posts
- Translate in-memory test article with bilingual support
- Update README with clean documentation
- Replace RSS with LinkedIn icon in navbar
- Update LinkedIn URLs across all pages
- Fix blog post date to July 21, 2021
- Remove Korean welcome post and unused files

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -185,24 +185,16 @@
           <a class="menu-link {% if url == '/' %}active{% endif %}" href="/">home</a>
           <a class="menu-link {% if url == '/about/' %}active{% endif %}" href="/about">about</a>
         {%- endif -%}
-        <a class="menu-link rss" href="/feed.xml">
+        <a class="menu-link" href="https://www.linkedin.com/in/shawn1125/" target="_blank" rel="noopener">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="17"
             height="17"
-            viewBox="0 0 512 512"
-            fill="#ED812E"
+            viewBox="0 0 24 24"
+            fill="#0077B5"
           >
-            <title>RSS</title>
-            <path
-              d="M108.56,342.78a60.34,60.34,0,1,0,60.56,60.44A60.63,60.63,0,0,0,108.56,342.78Z"
-            />
-            <path
-              d="M48,186.67v86.55c52,0,101.94,15.39,138.67,52.11s52,86.56,52,138.67h86.66C325.33,312.44,199.67,186.67,48,186.67Z"
-            />
-            <path
-              d="M48,48v86.56c185.25,0,329.22,144.08,329.22,329.44H464C464,234.66,277.67,48,48,48Z"
-            />
+            <title>LinkedIn</title>
+            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
           </svg>
         </a>
       </div>
