--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,11 @@
         </svg>
       </span>
     </label>
+    <div class="lang-switch">
+      <a href="#" onclick="switchSiteLanguage('en'); return false;" id="lang-en" class="lang-btn active">EN</a>
+      <span class="divider">|</span>
+      <a href="#" onclick="switchSiteLanguage('ko'); return false;" id="lang-ko" class="lang-btn">KO</a>
+    </div>
     <a id="mode">
       <svg
         class="mode-sunny"
