--- a/_includes/header.html
+++ b/_includes/header.html
@@ -155,10 +155,21 @@
     href="/assets/favicons/safari-pinned-tab.svg"
     color="#5bbad5"
   />
-  <meta name="apple-mobile-web-app-title" content="Jekyll Klise" />
-  <meta name="application-name" content="Jekyll Klise" />
+  <meta name="apple-mobile-web-app-title" content="{{ site.title }}" />
+  <meta name="application-name" content="{{ site.title }}" />
+  
+  <!-- SEO Tags -->
+  {% seo %}
+  
+  <!-- Additional SEO Meta Tags -->
+  <meta name="author" content="{{ site.author.name }}">
+  <meta name="keywords" content="Shawn Han, Backend Developer, Software Engineer, Node.js, TypeScript, AWS, Kubernetes, Spring Boot, Cloud Architecture, Germany">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#2c2c2c" />
 
   <link rel="stylesheet" href="/assets/css/style.css" />
+  
+  {% include structured-data.html %}
 </head>
