Add cache control headers to prevent browser caching
- Add no-cache meta tags to header.html
- Add version string to config for cache busting
- Force browsers to always fetch fresh content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -157,7 +157,12 @@
   />
   <meta name="apple-mobile-web-app-title" content="{{ site.title }}" />
   <meta name="application-name" content="{{ site.title }}" />
-  
+
+  <!-- Cache Control Meta Tags -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <!-- SEO Tags -->
   {% seo %}
   
